# rust-lab

./: README.md
lab01/src/: main.rs
lab02/src/: main.rs
lab03/: Cargo.toml
lab03/src/: main.rs
lab04/: Cargo.toml
lab04/src/: main.rs
lab05/: Cargo.toml  ex3.json
lab05/src/: main.rs
lab06/src/: main.rs
lab07/src/: main.rs
logos/: .gitignore  Cargo.toml  docker-compose.yml  logos_config.json
logos/client/: Cargo.toml
logos/client/src/: args.rs  backend.rs  config.rs  main.rs
logos/client/src/backends/: folder.rs  ftp.rs  mod.rs  sftp.rs  zip.rs
logos/common/: Cargo.toml
logos/common/src/: lib.rs
logos/frontend/: package-lock.json  package.json
logos/frontend/src/app/: app.html  app.ts  logos.spec.ts  logos.ts
logos/frontend/src/app/files/: files.html  files.ts
logos/frontend/src/app/logs/: logs.html  logs.ts
logos/frontend/src/app/stats/: stats.css  stats.html  stats.ts
logos/frontend/src/app/storages/: storages.html  storages.ts
logos/server/: Cargo.toml  Dockerfile
logos/server/src/: db.rs  main.rs  state.rs  ws.rs
